# fra-airtraffic

./: .gitignore  CMakeLists.txt  LICENSE  README-de_DE.md  README.md  container.cpp  container.h  content.cpp  content.h  fra-airtraffic.h  fra-airtraffic.rc  gc.c  gc.h  json.c  json.h  main.cpp  msbuild.yml  preview.cpp  preview.h  screenshot.cpp  screenshot.h  stdpaths.cpp  stdpaths.h  wxWidgets-features.cmake  wxWidgets-mingw32.sh  wxWidgets-msvc.bat
.github/workflows/: cmake-build.yml
img/: clock.pdn  setup_watermrk.pdn
json/: schedule-debug.json  schedule.json
msvc-build/: build-msvc2010.bat  download.vbs  fra-airtraffic.iss  fra-airtraffic.vcxproj  fra-airtraffic.vcxproj.filters  wx.props
screenshots/: CMakeLists.txt  animate.sh
